fix xss vulns due to embedding raw JSON in HTML
* fix the json template tag to ensure "</script>" does not appear literally - use Unicode escaping
* use the json template tag rather than sending encoded JSON to a template and using |safe

--- a/templates/question.html
+++ b/templates/question.html
@@ -601,6 +601,23 @@ function show_static_history(history) {
     });
 }
 
+
+{% if send_invitation %}
+function invite_user_to_discussion() {
+  show_invite_modal(
+    'Invite to Discussion',
+    'Invite a colleague to join the discussion. They will be a guest of this discussion if they are not added to the project team.',
+    {{send_invitation|json}},
+    'Please join our discussion about ' + discussion_info.title + ' in ' + discussion_info.project.title + '.',
+    {
+      project: discussion_info.project.id,
+      into_discussion: discussion_info.id
+    }
+  );
+  return false;
+}
+{% endif %}
+
 var sent_first_interaction = false;
 function record_interaction() {
   if (sent_first_interaction)
