--- a/templates/project.html
+++ b/templates/project.html
@@ -25,7 +25,7 @@
 {% if layout_mode == "columns" %}
   .question-column h2 {
     color: black;
-    margin: 5px 0 10px 0;
+    margin: 5px 0 px 0;
     text-align: center;
   }
 
@@ -143,8 +143,8 @@ h3.question-group-title {
 
 /* New styles for project dashboard elements */
   .last-login { font-size:.8em;}
-
-  .status { font-size:3em; color:#2D3337;}
+  li { padding-left: -10px; }
+  .status { font-size:2em; color:#2D3337;}
   .status-welcome { font-size:2em; margin:0 0 1em 0; }
   .status-box { border:1px solid #C1C1C1; padding:5px; text-align:center; background: #F6F7F7;}
   .status-small { font-size: .8em;}
@@ -154,9 +154,9 @@ h3.question-group-title {
   .status-section-header { display:block; border-bottom:1px solid #ccc; margin-bottom:1em; font-size:1.3em; }
   .piechart {
           display: block;
-          margin:3em auto 0 auto;
-          width: 300px;
-          height: 300px;
+          margin:0 auto 0 auto;
+          width: 66px;
+          height: 66px;
           border-radius: 50%;
           background-image: conic-gradient(
               #E1F8E2  70deg,
@@ -306,60 +306,14 @@ h3.question-group-title {
 {% block body_content %}
 
   {% if enable_experimental_evidence %}
+    <div class="row">
+      <div class="col-md-3"><div class="status-box"><h2 class="status">123 of {{ project.system.control_implementation_as_dict|length }}</h2> <span class="status-small">controls implemented</span></div></div>
+      <div class="col-md-3"><div class="status-box"><h2 class="status">4</h2> <span class="status-small">POA&Ms due soon</span></div></div>
+      <div class="col-md-3"><div class="status-box"><h2 class="status">{{ project.system.get_producer_elements|length }}</h2> <span class="status-small">system components</span></div></div>
+      <div class="col-md-3"><div class="status-box"><h2 class="piechart"></h2> <span class="status-small">overall compliance<span></div></div>
+    </div>
+    <div style="text-align: right;"><a href="#">view more</a></div>
     <!--
-    <div class="row">
-      <div class="col-md-12" style="margin-bottom:2em;">
-        <div style="border:1px solid #FACE8F; background: #FAEEC6; padding:5px 20px 5px 20px; border-radius: 15px;">
-          <div style="margin-left: 2em; margin-bottom:1em;">
-            <h3 class="alert-changed">Something has changed</h3><span style="font-size:.8em;">Here's some information that is alert-like and can be dismissed.</span>
-          </div>
-        </div>
-      </div>
-    </div>
-    -->
-
-    <div class="row">
-      <div class="col-md-12">
-        <span class="last-login">Last visit: {{request.user.last_login}}</span>
-        <h2 class="status-welcome">Welcome back, {{request.user}}</h2>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-3"><div class="status-box"><h2 class="status">{{ project.system.get_producer_elements|length }}</h2> <span class="status-small">total components in this project</span></div></div>
-      <div class="col-md-3"><div class="status-box"><h2 class="status">4</h2> <span class="status-small">total inventory-items in production</span></div></div>
-      <div class="col-md-3"><div class="status-box"><h2 class="status">{{ project.system.control_implementation_as_dict|length }}</h2> <span class="status-small">total controls selected</span></div></div>
-      <div class="col-md-3"><div class="status-box"><h2 class="status">100</h2> <span class="status-small">controls partially or fully implemented</span></div></div>
-    </div>
-
-    <div class="row" style="margin-top:2em;">
-      <div class="col-md-6">
-        <div style="padding:10px 0 40px 0;">
-          <span class="status-section-header">Here's what has changed since your last visit</span>
-            <ul>
-              <li>Tiffany edited CISCO ASA Firewall component</li>
-              <li>5 components were updated. (<a href="#">view changes</a>)</li>
-              <li>2 components were added to this project. (<a href="#">view additions</a>)</li>
-              <li>John left <a href="#">a comment</a> on your Project. </li>
-            </ul>
-          <br />
-          <span class="status-section-header">To Do (as of 12/18/20)</span>
-            <ul style="list-style-type: none;">
-              <li><input type="checkbox"></input> <span class="input-todo">Review OSCAL import</span></li>
-              <li><input type="checkbox"></input><span class="input-todo">Approve CISCO ASA Firewall component</span></li>
-              <li><input type="checkbox"></input><span class="input-todo">Export OSCAL for Jeff at InitTech</span></li>
-              <li><input type="checkbox"></input><span class="input-todo">Submit SSP</span></li>
-            </ul>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div style="background: #F2F9F2; border: 1px solid #B2E0B2; padding: 2em; text-align:center;">
-          <span style="font-size:1.5em;">Overall Compliance Progress</span>
-            <div class="piechart"></div>
-        </div>
-      </div>
-    </div>
-    <br /><br />
     <div class="row">
       <div class="col-md-12">
         <div>
@@ -388,92 +342,50 @@ h3.question-group-title {
         </div>
       </div>
     </div>
-    <br /><br />
-    <div class="row">
-      <div class="col-md-12">
-        <div>
-          <span class="status-section-header">Portfolio Component Progress</span>
-          <div>
-            <table class="portfolio-table">
-              <tr style="background:#D9D9D9; border-top:1px solid #ccc; ">
-                <td style="width:40%; ">&nbsp;</td>
-                <td style="width:15%; text-align:right; font-size:.8em; font-weight:thin; padding:5px;">25%</td>
-                <td style="width:15%; text-align:right; font-size:.8em; font-weight:thin; padding:5px;">50%</td>
-                <td style="width:15%; text-align:right; font-size:.8em; font-weight:thin; padding:5px;">75%</td>
-                <td style="width:15%; text-align:right; font-size:.8em; font-weight:thin; padding:5px;">100%</td>
-              </tr>
-              <tr style="background:#F2F2F2; border-bottom:1px solid #D9D9D9;">
-                <td style="width:40%; padding:.5em 0 .5em 1em;">
-                  <span class="portfolio-table-component">CISCO ASA Firewall</span>
-                  <br /><span class="portfolio-table-component-desc">An advanced network router and firewall</span>
-                </td>
-                <td style="width:15%; "> <div style="width:100%; height: 80%; background:#1D919B; border-right:1px solid #fff;">&nbsp;</div></td>
-                <td style="width:15%;"> <div style="width:100%; height: 80%; background:#1D919B; border-right:1px solid #fff;">&nbsp;</div></td>
-                <td style="width:15%;"><div style="width:100%; height: 80%; background:#1D919B; border-right:1px solid #fff;">&nbsp;</div></td>
-                <td style="width:15%;"></td>
-              </tr>
-              <tr style="background:#F2F2F2;">
-                <td style="width:40%; padding:.5em 0 .5em 1em;">
-                  <span class="portfolio-table-component">Generic File Server</span>
-                  <br /><span class="portfolio-table-component-desc">NIST SP 800-171 compliance for a file server</span>
-                </td>
-                <td style="width:15%;"> <div style="width:100%; height: 80%; background:#1D919B; border-right:1px solid #fff;">&nbsp;</div></td>
-                <td style="width:15%;"> <div style="width:100%; height: 80%; background:#1D919B; border-right:1px solid #fff;">&nbsp;</div></td>
-                <td style="width:15%;"></td>
-                <td style="width:15%;"></td>
-              </tr>
-              <tr style="background:#F2F2F2;">
-                <td style="width:40%; padding:.5em 0 .5em 1em;">
-                  <span class="portfolio-table-component">Microsoft SQL Server</span>
-                  <br /><span class="portfolio-table-component-desc">Relational database server for managing structured data</span> 
-               </td>
-                <td style="width:15%;"> <div style="width:100%; height: 80%; background:#1D919B; border-right:1px solid #fff;">&nbsp;</div></td>
-                <td style="width:15%;"> <div style="width:100%; height: 80%; background:#1D919B; border-right:1px solid #fff;">&nbsp;</div></td>
-                <td style="width:15%;"></td>
-                <td style="width:15%;"></td>
-              </tr>
-            </table>
-          </div>
+    -->
+    <div class="row" style="margin-top:0.3em;">
+      <div class="col-md-4">
+        <div style="padding:10px 0 40px 0;">
+          <span class="status-section-header">Description</span>
+            <p>
+                This system provides important services to the organization.
+                This system provides important services to the organization.
+                This system provides important services to the organization... (<a href="#">view more</a>)
+            </p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div style="padding:10px 0 10px 0;">
+          <span class="status-section-header">To do next</span>
+            <ul style="list-style-type: none;">
+              <li><input type="checkbox"></input><span class="input-todo">Review OSCAL import</span></li>
+              <li><input type="checkbox"></input><span class="input-todo">Approve CISCO ASA Firewall component</span></li>
+              <li><input type="checkbox"></input><span class="input-todo">Export OSCAL for Jeff at InitTech</span></li>
+{#              <li><input type="checkbox"></input><span class="input-todo">Submit SSP</span></li>#}
+            </ul>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div style="padding:10px 0 40px 0;">
+          <span class="status-section-header">Recently changed</span>
+            <ul>
+              <li>Tiffany edited CISCO ASA Firewall component</li>
+              <li>1 component updated. (<a href="#">view changes</a>)</li>
+              <li>2 components added. (<a href="#">view additions</a>)</li>
+              <li>John left <a href="#">a comment</a> on your Project. </li>
+            </ul>
         </div>
       </div>
     </div>
-    <br />
-    <div class="row">
-      <div class="col-md-12">
-        <div>
-          <span class="status-section-header">Vulnerabilities Detected</span>
-          <div>
-            <table class="vuln-table">
-              <tr style="background:#E6E6E6; ">
-                <td style="width:50%; padding:.5em 0 .5em 1em; "><span class="vuln-table-head">COMPONENT</span></td>
-                <td style="width:30%;"><span class="vuln-table-head">STATUS</span></td>
-                <td style="width:20%;"><span class="vuln-table-head">SOURCE</span></td>
-              </tr>
-              <tr style="border-bottom:1px solid #ccc;">
-                <td style="width:50%; padding:.5em;"><span class="vuln-table-component">Microsoft SQL Server</span><br /><span class="vuln-table-component-desc">Relational database server for managing structured data</span></td>
-                <td style="width:30%;"><span class="vuln-table-bad">NOT RUNNING</span></td>
-                <td style="width:20%;">Wazuh</td>
-              </tr>
-              <tr style="border-bottom:1px solid #ccc;">
-                <td style="width:50%; padding:.5em;"><span class="vuln-table-component">Generic File Server</span><br /><span class="vuln-table-component-desc">NIST SP 800-171 compliance for a file server</span></td>
-                <td style="width:30%;"><span class="vuln-table-medium">NO PING RESPONSE</span></td>
-                <td style="width:20%;">Wazuh</td>
-              </tr>
-            </table>
-          </div>
-        </div>
-      </div>
-    </div>
-    <br /><br />
   {% endif %}
 
     <div class="row">
       <div class="col-sm-12" class="project-row-style">
         <span class="status-section-header">Questionnaires / Compliance App</span>
         {% if project.root_task.module.spec.introduction %}
-          <p class="project-text">
-          {{project.root_task.render_introduction|safe}}
-          </p>
+{#          <p class="project-text">#}
+{#          {{project.root_task.render_introduction|safe}}#}
+{#          </p>#}
         {% endif %}
 
         {% if project.root_task.module.spec.is_app_stub %}
@@ -494,7 +406,7 @@ h3.question-group-title {
 
             {% for group in column.groups %}
             {% if group.title %}<div><a id="{{group.title}}"></a>&nbsp;</div>{% endif %}
-            <div class="question-group">
+            <div class="question-group" style="border: 0px solid blue;margin-top:0px;margin-bottom: 0px;">
 
               {% if group.title %}
               <h3 class="question-group-title">{{group.title}}</h3>
