--- a/templates/systems/sar_list.html
+++ b/templates/systems/sar_list.html
@@ -48,14 +48,16 @@
     {% else %}
       {% for item in sars %}
         <div id="tab-content" class="row row-control">
-            <div id="" class="col-xs-5 col-sm-5 col-md-5 col-lg-5 col-xl-5">
-                <a class="portfolio-project-link" href="/systems/{{ system.id }}/sar/{{ item.id }}/view">{{ item.id }}</a><br>
-                <small><a class="portfolio-project-link" href="/systems/{{ system.id }}/sar/{{ item.id }}/view">{{ item.name }}</a></small>
+            <div id="" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+                <a class="portfolio-project-link" href="/systems/{{ system.id }}/sar/{{ item.id }}/view">{{ item.id }}</a>
+                <a class="portfolio-project-link" href="/systems/{{ system.id }}/sar/{{ item.id }}/view">{{ item.name }}</a>
             </div>
             <div id="" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                {{ item.description }}
+                {%  if item.description is not None %}
+                    {{ item.description }}
+                {%  endif %}
             </div>
-            <div id="" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div id="" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
                 {{ item.updated|timesince}} ago
             </div>
             <div id="" class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
